# afr-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  quickstart.py  verify_install.py
afr_python_sdk/: __init__.py  client.py  recorder.py  utils.py  wrappers.py
docs/: overview.md
examples/: async_run.py  basic_run.py  with_llm.py
tests/: test_utils.py  test_wrappers.py
